--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 			</header>
 			<section>
 				<figure class="cd-image-container">
-					<img id="compareImageBefore" src="/images/old-1.jpg" alt="Original Image">
+					<img id="compareImageBefore" src="images/old-1.jpg" alt="Original Image">
 					<span class="cd-image-label" data-type="original">Before</span>
 
 					<div class="cd-resize-img"> <!-- the resizable image on top -->
-						<img id="compareImageAfter" src="/images/new-1.jpg" alt="Modified Image">
+						<img id="compareImageAfter" src="images/new-1.jpg" alt="Modified Image">
 						<span class="cd-image-label" data-type="modified">After</span>
 					</div>
 
@@ -42,20 +42,20 @@
 						<ul style="width: 100%;">
 							<li style="width:33%">
 								<a class="cd-changeImage" 
-								data-before="/images/old-1.jpg" 
-								data-after="/images/new-1.jpg" 
+								data-before="images/old-1.jpg" 
+								data-after="images/new-1.jpg" 
 								href="#"><strong>Profile</strong> (W/Background)</a>
 							</li>
 							<li style="width:33%">
 								<a class="cd-changeImage" 
-								data-before="/images/old-2.jpg" 
-								data-after="/images/new-2.jpg" 
+								data-before="images/old-2.jpg" 
+								data-after="images/new-2.jpg" 
 								href="#"><strong>Profile</strong> (Wout/Background)</a>
 							</li>
 							<li style="width:33%">
 								<a class="cd-changeImage" 
-								data-before="/images/old-3.jpg" 
-								data-after="/images/new-3.jpg" 
+								data-before="images/old-3.jpg" 
+								data-after="images/new-3.jpg" 
 								href="#"><strong>'More info'</strong> (W/Background)</a>
 							</li>
 						</ul>
