fixed some more things

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<title>Pretty Steam</title>
 
-		<link rel="stylesheet" href="css/core.css">
-		<link rel="stylesheet" href="css/nexaFont.css">
+		<link rel="stylesheet" href="css/core.min.css">
+		<link rel="stylesheet" href="css/nexaFont.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
