Worked on small screens and such

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 					<span class="cd-handle"></span> <!-- slider handle -->
 				</figure> <!-- cd-image-container -->
-				<hr>
+				<hr id="imageSpace">
 				<div style="width: 100%;">
 					<div style="width: 50%; margin: auto;">
 						<ul style="width: 100%;">
@@ -59,6 +59,9 @@
 								href="#"><strong>'More info'</strong> (W/Background)</a>
 							</li>
 						</ul>
+					</div>
+					<div id="smallScreen">
+						<a target="_blank" href="https://github.com/teh-random-name/PrettySteam/blob/master/README.md"><strong>View</strong> on GitHub</a>
 					</div>
 				</div>
 			</section>
