Messing with new fonts
Added Aaargh font-face due to issues of nexa on small font sizes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Pretty Steam</title>
 
 		<link rel="stylesheet" href="css/core.min.css">
-		<link rel="stylesheet" href="css/nexaFont.min.css">
+		<link rel="stylesheet" href="css/fonts.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
