--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="wrapper">
 			<header>
 				<h1>Pretty Steam</h1>
-				<p>Makes Steam look less crap<br><small>atleast in your web broser</small></p>
+				<p>Makes Steam look less crap<br><small>atleast in your web bowser</small></p>
 				<ul>
 					<li style="width: 100%"><a target="_blank" href="https://github.com/teh-random-name/PrettySteam/blob/master/README.md"><strong>Get this</strong> on GitHub</a></li>
 				</ul>
